[gd_scene load_steps=4 format=3 uid="uid://dpa5tro082qtk"]

[ext_resource type="Script" path="res://scenes/components/boid.gd" id="1_10osq"]
[ext_resource type="Texture2D" uid="uid://b5gywe422atip" path="res://assets/triangle.png" id="1_cl1rl"]

[sub_resource type="Gradient" id="Gradient_okups"]
offsets = PackedFloat32Array(0, 0.809783, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.88587, 1, 1, 1, 0)

[node name="Boid" type="Node2D"]
script = ExtResource("1_10osq")
tracking_color = Color(0.704559, 0.795972, 0.541092, 1)

[node name="ShadowRoot" type="Node2D" parent="."]
position = Vector2(5, 16)

[node name="Shadow" type="Sprite2D" parent="ShadowRoot"]
self_modulate = Color(0, 0, 0, 0.152941)
z_index = -1
y_sort_enabled = true
rotation = 1.5708
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_cl1rl")

[node name="BodyRoot" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="BodyRoot"]
y_sort_enabled = true
rotation = 1.5708
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_cl1rl")

[node name="SplatEmitter" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
texture = ExtResource("1_cl1rl")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
damping_min = 50.0
damping_max = 50.0
angle_max = 360.0
scale_amount_min = 0.02
scale_amount_max = 0.1
color_ramp = SubResource("Gradient_okups")

[node name="DirectionLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 150, 0)
width = 1.0
